# react-native-blog-agentic-ai

./: app.json  h.md  package-lock.json  package.json
AiBlog/: .env.sample  app.json  package-lock.json  package.json
AiBlog/src/app/: _layout.tsx  index.tsx
AiBlog/src/components/: BlogMain.tsx  ProfileName.tsx
AiBlog/src/constants/: theme.ts
AiBlog/src/data/: posts.ts
AiBlog/src/store/: auth_store.ts  blog_store.ts
AiBlog/src/utils/: api.ts  format_datetime.ts  get_blog_by_id.ts  get_public_blogs.ts  get_user_by_user_id.ts  image_upload.ts
server/: .env.sample  .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  schemas.py
server/blog_files/: 2026-fifa-world-cup-news-roundup-5de5344b.md  artificial-general-intelligenc-806c31.md  artificial-general-intelligence-an-overview-778d3629.md  artificial-general-intelligence-current-state-and-future-dir-fa8f7966.md  indian-weather-in-2026-trends-forecasts-and-implications-f43f4f19.md  indian-weather-year-2026-updat-9f239b.md  introduction-to-artificial-gen-90273c.md
server/src/database/: database.py
server/src/database/public_blog/: models.py  schemas.py
server/src/database/user/: models.py
server/src/pipeline/: graph.py  image_search.py
server/src/routes/: auth.py  blogs.py  profile.py  public.py
src/app/: _layout.tsx  index.tsx
src/app/(auth)/: _layout.tsx  index.tsx  reset_password.tsx  signup.tsx
src/app/(tabs)/: _layout.tsx  create_blog.tsx  index.tsx  profile.tsx
src/components/: FeaturedCard.tsx  OtpField.tsx  PostCard.tsx
src/constants/: theme.ts
(+18 files in other folders)
